--- a/oldver/oldver.vcxproj
+++ b/oldver/oldver.vcxproj
@@ -18,18 +18,11 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="func.c" />
-    <ClCompile Include="mooje.c" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="mooje.h" />
-  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{bcbc5707-53d7-4f3a-bef8-67c2521c9493}</ProjectGuid>
-    <RootNamespace>Test</RootNamespace>
+    <ProjectGuid>{3993ec4c-da8c-4352-90e7-4ebf04ca207e}</ProjectGuid>
+    <RootNamespace>oldver</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -145,6 +138,9 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
+  <ItemGroup>
+    <ClCompile Include="old.c" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
