--- a/sosoo/sosoo.vcxproj.filters
+++ b/sosoo/sosoo.vcxproj.filters
@@ -15,16 +15,8 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="mooje.c">
+    <ClCompile Include="소수.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="func.c">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="mooje.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
   </ItemGroup>
 </Project>
