--- a/Test/Test.vcxproj
+++ b/Test/Test.vcxproj
@@ -21,9 +21,13 @@
   <ItemGroup>
     <ClCompile Include="func.c" />
     <ClCompile Include="mooje.c" />
+    <ClCompile Include="sub.c">
+      <SDLCheck Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</SDLCheck>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="mooje.h" />
+    <ClInclude Include="line.h" />
+    <ClInclude Include="point.h" />
     <ClInclude Include="student.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
