--- a/Test/Test.vcxproj.filters
+++ b/Test/Test.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClCompile Include="func.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="sub.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="mooje.h">
+    <ClInclude Include="student.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="student.h">
+    <ClInclude Include="point.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="line.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
